--- a/demo-next/package.json
+++ b/demo-next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "next": "14.0.1",
     "react": "^18",
-    "react-content-manager": "^0.0.1",
+    "react-content-manager": "0.0.2",
     "react-dom": "^18"
   },
   "devDependencies": {
