--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "react-content-manager",
-  "version": "0.0.1",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "version": "0.0.2",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
-    "build": "tsup",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "test": "jest --config jestconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run prettier && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -25,15 +31,24 @@
     "url": "https://github.com/pavelee/react-content-manager/issues"
   },
   "homepage": "https://github.com/pavelee/react-content-manager#readme",
-  "dependencies": {
-    "antd": "^5.10.3",
-    "react": "^18.2.0",
-    "react-icons": "^4.11.0"
+  "peerDependencies": {
+    "react": ">=16"
   },
   "devDependencies": {
+    "antd": "^5.10.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "tslib": "^2.6.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.7",
     "@types/react": "^18.2.34",
+    "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
 }
