--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-content-manager",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
@@ -15,7 +15,7 @@
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
