--- a/demo-next/package.json
+++ b/demo-next/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,7 @@
   "dependencies": {
     "next": "14.0.1",
     "react": "^18",
-    "react-content-manager": "0.0.3",
+    "react-content-manager": "file:../react-content-manager-0.0.4.tgz",
     "react-dom": "^18"
   },
   "devDependencies": {
