--- a/demo-next/package.json
+++ b/demo-next/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf ./next && next dev",
+    "dev": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "relative-deps"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-content-manager": "^0.0.29",
+    "react-content-manager": "^0.0.32",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -22,7 +23,11 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
+    "relative-deps": "^1.0.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "relativeDependencies": {
+    "react-content-manager": "../"
   }
 }
