--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "watch": "nodemon --watch './src/**/*' -e js,json,jsx,ts,tsx --exec 'npm run build'"
   },
   "repository": {
     "type": "git",
@@ -36,21 +37,22 @@
     "react": ">=16"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.10",
-    "@types/react": "^18.2.39",
-    "antd": "^5.11.5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.1",
+    "antd": "^5.16.5",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.4.5"
   }
 }
