--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
     "format": "prettier --write .",
-    "watch": "nodemon --watch './src/**/*' -e js,json,jsx,ts,tsx --exec 'npm run build'"
+    "watch": "nodemon --watch './src/**/*' -e js,json,jsx,ts,tsx --exec 'npm run build'",
+    "lint": "eslint ./src --ext .ts,.tsx"
   },
   "repository": {
     "type": "git",
@@ -37,11 +38,18 @@
     "react": ">=16"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "antd": "^5.17.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
@@ -53,6 +61,7 @@
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   }
 }
