chore: Disable "@typescript-eslint/no-var-requires" rule in .eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   "rules": {
     "no-console": "warn",
     "no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-var-requires": "off"
   },
   "settings": {
     "react": {
