--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-content-manager",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
@@ -35,7 +35,11 @@
   },
   "homepage": "https://github.com/pavelee/react-content-manager#readme",
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "typescript": ">=4.1.0"
+  },
+  "dependencies": {
+    "antd": "^5.18.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
@@ -45,7 +49,6 @@
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "antd": "^5.17.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -55,7 +58,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.2",
     "prettier": "^3.2.5",
-    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
