--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "homepage": "https://github.com/pavelee/react-content-manager#readme",
   "peerDependencies": {
-    "react": ">=16",
-    "typescript": ">=4.1.0"
+    "react": ">=16"
   },
   "dependencies": {
     "antd": "^5.18.1"
