--- a/demo-next/package.json
+++ b/demo-next/package.json
@@ -6,12 +6,12 @@
     "dev": "NODE_OPTIONS='--inspect' rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "relative-deps"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.1",
+    "next": "14.2.14",
     "react": "^18.3.1",
+    "react-content-manager": "^0.1.9",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
@@ -22,7 +22,6 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.1",
     "postcss": "^8.4.47",
-    "relative-deps": "^1.0.7",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
