chore: update tsconfig.json to exclude additional demo directories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src"],
-  "exclude": ["dist", "node_modules", "demo-next"],
+  "exclude": ["dist", "node_modules", "demo/demo-next", "demo/demo-vite"],
   "compilerOptions": {
     "module": "esnext",
     "lib": ["dom", "esnext"],
