--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
     "format": "prettier --write .",
+    "check-format": "prettier --check .",
     "watch": "nodemon --watch './src/**/*' -e js,json,jsx,ts,tsx --exec 'npm run build'",
     "lint": "eslint ./src --ext .ts,.tsx",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "check-exports": "attw --pack .",
+    "ci": "npm run build && npm run check-format && npm run check-exports"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -43,6 +46,7 @@
     "antd": "^5.21.6"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.16.4",
     "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
