--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
-    "prepare": "npm run build",
+    "prepare": "husky",
     "prepublishOnly": "npm test",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
