--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
     "prepare": "husky",
-    "prepublishOnly": "npm test",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "watch": "nodemon --watch './src/**/*' -e js,json,jsx,ts,tsx --exec 'npm run build'",
     "lint": "eslint ./src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
     "check-exports": "attw --pack .",
-    "ci": "npm run build && npm run test && npm run check-format && npm run check-exports"
+    "ci": "npm run build && npm run test && npm run check-format && npm run check-exports",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
+    "@changesets/cli": "^2.27.9",
     "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
