--- a/demo/demo-next/package.json
+++ b/demo/demo-next/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.16",
-    "react": "^18.3.1",
-    "react-content-manager": "^3.0.0",
-    "react-dom": "^18.3.1"
+    "next": "15.1.4",
+    "react": "^19.0.0",
+    "react-content-manager": "^3.1.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.8.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   },
   "relativeDependencies": {
     "react-content-manager": "../"
