--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": ">=16"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.23.1"
   },
   "devDependencies": {
